--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "start:dev": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "lint": "eslint ."
   },
   "dependencies": {
     "axios": "^1.5.1",
@@ -15,6 +16,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "eslint": "^8.50.0",
     "nodemon": "^3.0.1"
   }
 }
